--- a/AppLogin/templates/AppLogin/login.html
+++ b/AppLogin/templates/AppLogin/login.html
@@ -30,16 +30,16 @@
        
         <!-- Page content-->
      
-        <h1 class="fw-bolder mb-1">Bienvenido, aqui podras registrarte!!!</h1>
+        <h1 class="fw-bolder mb-1">FORMULARIO DE INGRESO</h1>
+        <h1 >{{mensaje}}</h1>
                             <!-- Post meta content-->
-                            <form action="{% url 'login' %}" method="POST"> {% csrf_token %}
-                                <table>
-                                    {{ formulario.as_table }}
-                                </table>
-                                <input type="submit", value="Enviar">
-                    
-                              
-                            </form>
+         <form action="{% url 'login' %}" method="POST"> {% csrf_token %}
+            <table>
+                {{ formulario.as_p }}
+            </table>
+            <button type="submit">Iniciar sesion</button> 
+  
+        </form>
         
                         
                             
