--- a/AppLogin/templates/AppLogin/home.html
+++ b/AppLogin/templates/AppLogin/home.html
@@ -21,9 +21,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                       
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'login' %}">Sign In</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'registro' %}">Registro</a></li>
                     </ul>
                 </div>
             </div>
