--- a/AppLogin/templates/AppLogin/registro.html
+++ b/AppLogin/templates/AppLogin/registro.html
@@ -21,21 +21,21 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'registro' %}">Registro</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'login' %}">Sign In</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- Page content-->
-        <h1 class="fw-bolder mb-1">FORMULARIO DE INGRESO</h1>
+        <h1 class="fw-bolder mb-1">FORMULARIO DE REGISTRO</h1>
         <h1 >{{mensaje}}</h1>
                             <!-- Post meta content-->
         <form action="{% url 'login' %}" method="POST"> {% csrf_token %}
             <table>
                 {{ formulario.as_p }}
             </table>
-            <button type="submit">Iniciar sesion</button> 
+            <button type="submit">Registrate</button> 
         </form>                
         <!-- Footer-->
         <footer class="py-5 bg-dark">
