--- a/AppLogin/templates/AppLogin/home.html
+++ b/AppLogin/templates/AppLogin/home.html
@@ -13,6 +13,9 @@
         <link href="{% static 'AppLogin/css/styles.css' %}" rel="stylesheet" />
     </head>
     <body>
+        {% block titulo_de_pagina %}
+        
+        {% endblock %}
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
@@ -23,12 +26,19 @@
                         
                        
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
+                        {% if not request.user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'login' %}">Sign In</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'registro' %}">Registro</a></li>
+                        {% else %}
+                        <p>hola! {{user.username}}</p>
+                        <li class="nav-item"><a class="btn btn-primary" href="{% url 'logout' %}">logout</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
         </nav>
+        {% block contenido_que_cambia %}
+        {% endblock %}
         <!-- Page content-->
         <div class="container mt-5">
             <div class="row">
