--- a/AppLogin/templates/AppLogin/home.html
+++ b/AppLogin/templates/AppLogin/home.html
@@ -23,9 +23,6 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        
-                       
-                        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
                         {% if not request.user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'login' %}">Sign In</a></li>
                         
@@ -34,7 +31,7 @@
                         <img src="{{ imagen }}" alt="">
                         <li class="nav-item"><a class="nav-link" href="{% url 'registro' %}">Registro</a></li>
                         <li class="nav-item"><a class="btn btn-primary" href="{% url 'logout' %}">logout</a></li>
-                       
+                        <li class="nav-item"><a class="btn btn-primary" href="{% url 'crear_post' %}">Crear Entrada</a></li>
                         {% endif %}
                     </ul>
                 </div>
