--- a/AppLogin/templates/AppLogin/home.html
+++ b/AppLogin/templates/AppLogin/home.html
@@ -19,18 +19,19 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#!">WorkHome</a>
+               
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         {% if not request.user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'login' %}">Sign In</a></li>
+                        <li class="nav-item"><a class="btn btn-danger" aria-current="page" href="{% url 'login' %}">Sign In</a></li>
+                        <li class="nav-item"><a class="btn btn-primary" href="{% url 'registro' %}">Registrate</a></li>
                         
                         {% else %}
                         <p>hola! {{user.username}}</p>
                         <img src="{{ imagen }}" alt="">
-                        <li class="nav-item"><a class="nav-link" href="{% url 'registro' %}">Registro</a></li>
-                        <li class="nav-item"><a class="btn btn-primary" href="{% url 'logout' %}">logout</a></li>
+                        
+                        <li class="nav-item"><a class="btn btn-secondary" href="{% url 'logout' %}">logout</a></li>
                         <li class="nav-item"><a class="btn btn-primary" href="{% url 'crear_post' %}">Crear Entrada</a></li>
                         {% endif %}
                     </ul>
