--- a/AppLogin/templates/AppLogin/logout.html
+++ b/AppLogin/templates/AppLogin/logout.html
@@ -2,7 +2,6 @@
 
 {% load static %}
 {% block titulo_de_pagina %} 
-<h1 class= "mb-5"> LOGOUT</h1>
 
 {% endblock %}
 
@@ -10,7 +9,7 @@
 
 
 {% block contenido_que_cambia %} 
-<h1>te deslogueaste</h1>
+<h1>Desconectado</h1>
 {% endblock %}
 
 
