--- a/Blogs/templates/Blogs/crear_post.html
+++ b/Blogs/templates/Blogs/crear_post.html
@@ -22,9 +22,6 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         {% block titulo_de_pagina %}  <h1 class="mb-5">Crear Entrada</h1>  {% endblock %}
-
-                       
-                        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'login' %}">Sign In</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'registro' %}">Registro</a></li>
                         <li class="nav-item"><a class="btn btn-primary" href="{% url 'logout' %}">logout</a></li>
@@ -34,19 +31,21 @@
             </div>
         </nav> 
                    
-        {% load crispy_forms_tags %}
+        <!--{% load crispy_forms_tags %}-->
         
-        {% block contenido_que_cambia %} 
+      
         
           <form action="{% url 'crear_post' %}" class="mt-3" autocomplete="off" method="post" enctype="multipart/form-data"> 
             {% csrf_token %}
         
-            {{ form|crispy:"bootstrap4" }}
            
-            <button type="submit" class="btn btn-success">guardar</button>
+            {% crispy form %}
+
+           
+            <button type="submit" class="btn btn-success">Postear</button>
         
           </form>
-        {% endblock %}   
+        
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
         </footer>
