--- a/AppLogin/templates/AppLogin/home.html
+++ b/AppLogin/templates/AppLogin/home.html
@@ -30,21 +30,16 @@
                         {% else %}
                         <p>hola! {{user.username}}</p>
                         <img src="{{ imagen }}" alt="">
-<<<<<<< HEAD
-                        <li class="nav-item"><a class="nav-link" href="{% url 'registro' %}">Registro</a></li>
+                        <li class="nav-item"><a class="btn btn-primary" href="{% url 'crear_post' %}">Registrate</a></li>
                         <li class="nav-item"><a class="btn btn-primary" href="{% url 'logout' %}">logout</a></li>
                         
-=======
-                        
-                        <li class="nav-item"><a class="btn btn-secondary" href="{% url 'logout' %}">logout</a></li>
-                        <li class="nav-item"><a class="btn btn-primary" href="{% url 'crear_post' %}">Crear Entrada</a></li>
->>>>>>> ce3ced25e43ad80777f0d65e2ff4ca798e2ee75b
                         {% endif %}
                     </ul>
                 </div>
             </div>
         </nav> 
         {% block contenido_que_cambia %}
+        
         {% endblock %}
         <!-- Page content-->
         <div class="container mt-5">
