--- a/AppLogin/templates/AppLogin/home.html
+++ b/AppLogin/templates/AppLogin/home.html
@@ -24,13 +24,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         {% if not request.user.is_authenticated %}
-                        <li class="nav-item"><a class="btn btn-danger" aria-current="page" href="{% url 'login' %}">Sign In</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'login' %}">Sign In</a></li>
                         <li class="nav-item"><a class="btn btn-primary" href="{% url 'registro' %}">Registrate</a></li>
                         
                         {% else %}
                         <p>hola! {{user.username}}</p>
                         <img src="{{ imagen }}" alt="">
-                        <li class="nav-item"><a class="btn btn-primary" href="{% url 'crear_post' %}">Registrate</a></li>
+                        <li class="nav-item"><a class="btn btn-danger" href="{% url 'crear_post' %}">Postear</a></li>
                         <li class="nav-item"><a class="btn btn-primary" href="{% url 'logout' %}">logout</a></li>
                         
                         {% endif %}
