--- a/AppLogin/templates/AppLogin/registro.html
+++ b/AppLogin/templates/AppLogin/registro.html
@@ -21,7 +21,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="btn btn-primary" href="{% url 'home' %}">Home</a></li>
-                        <li class="nav-item"><a class="btn btn-danger" aria-current="page" href="{% url 'login' %}">Sign In</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'login' %}">Sign In</a></li>
                         
                     </ul>
                 </div>
