--- a/Blogs/templates/Blogs/posteos.html
+++ b/Blogs/templates/Blogs/posteos.html
@@ -1,45 +1,76 @@
-{% extends "AppLogin/home.html" %}
-
-{% block titulo_de_pagina %} 
-posteos
-{% endblock %}
-
-{% block contenido_que_cambia %} 
-    <div class="mt-3">
-        <div class="row mb-3"> 
-            <div class="col-3 offset-9">
-                <a href="{% url 'crear_post' %}" class="btn btn-primary float-right">
-                    Crear nuevo post 
-                </a>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        {% load static %}
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>WorkHome</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="{% static 'AppLogin/css/styles.css' %}" rel="stylesheet" />
+    </head>
+    <body>
+     
+        <!-- Responsive navbar-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="#!">Posteos</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'login' %}">Sign In</a></li>
+                        <li class="nav-item"><a class="btn btn-danger" href="{% url 'crear_post' %}">Postear</a></li>
+                        <li class="nav-item"><a class="btn btn-primary" href="{% url 'logout' %}">logout</a></li>
+                      
+                    </ul>
+                </div>
             </div>
-        </div>
+        </nav> 
+                   
+        <!--{% load crispy_forms_tags %}-->
+        
+      
         {% if posts %}
-            {% for post in posts %}
-                {% if forloop.first %}<div class="row">{% endif %}
-                <div class="col-4">
-                    <div class="card">
-                        <img class="card-img-top" src="{{ post.imagen.url }}" alt="{{ post.titulo }}">
-                        <div class="card-body">
-                            <h5 class="card-title"> {{ post.titulo }}</h5>
-                            <h6 class="card-subtitle"> Autor: {{ post.autor.username }}</h6>
-                        </div>
-                        <div class="card-footer">
-                            {% if user == post.autor %}
-                                <a href="{% url 'eliminar_post' post.id %}" class="btn btn-danger">
-                                    Eliminar post 
-                                </a>
-                            {% endif %}
-                        </div>
+        {% for post in posts %}
+            {% if forloop.first %}<div class="row">{% endif %}
+            <div class="col-4">
+                <div class="card">
+                    <img class="card-img-top" src="" alt="{{ post.image.url }}">
+                    <div class="card-body">
+                        <h5 class="card-title"> {{ post.titulo }}</h5>
+                        <h6 class="card-subtitle"> Autor: {{ post.autor.username }}</h6>
+                    </div>
+                    <div class="card-footer">
+                        {% if user == post.autor %}
+                            <a href="{% url 'eliminar_post' post.id %}" class="btn btn-danger">
+                                Eliminar post 
+                            </a>
+                        {% endif %}
                     </div>
                 </div>
-               {% if forloop.counter|divisibleby:3 %}</div><div class="row">{% endif %}
-               {% if forloop.last %}</div>{% endif %}
-            {% endfor %}
+            </div>
+           {% if forloop.counter|divisibleby:3 %}</div><div class="row">{% endif %}
+           {% if forloop.last %}</div>{% endif %}
+        {% endfor %}
 
-            {% include "Blogs/paginacion.html" %}
+        {% include "Blogs/paginacion.html" %}
 
-        {% else %}
-            <div class="alert alert-danger"> aquí no hay nada</div>
-        {% endif %}
-    </div>
-{% endblock %}
+    {% else %}
+        <div class="alert alert-danger"> aquí no hay nada</div>
+    {% endif %}
+</div>
+
+        
+        <footer class="py-5 bg-dark">
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
+</html>
