Arreglo formulario post

--- a/Blogs/templates/Blogs/posteos.html
+++ b/Blogs/templates/Blogs/posteos.html
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'login' %}">Sign In</a></li>
+                        <li class="nav-item"><a class="btn btn-light" aria-current="page" href="{% url 'home' %}">Home</a></li>
                         <li class="nav-item"><a class="btn btn-danger" href="{% url 'crear_post' %}">Postear</a></li>
                         <li class="nav-item"><a class="btn btn-primary" href="{% url 'logout' %}">logout</a></li>
                       
@@ -42,6 +42,7 @@
                     <img class="card-img-top" src="" alt="{{ post.image.url }}">
                     <div class="card-body">
                         <h5 class="card-title"> {{ post.titulo }}</h5>
+                        <h5 class="card-title"> {{ post.contenido }}</h5>
                         <h6 class="card-subtitle"> Autor: {{ post.autor.username }}</h6>
                     </div>
                     <div class="card-footer">
