--- a/AppLogin/templates/AppLogin/home.html
+++ b/AppLogin/templates/AppLogin/home.html
@@ -32,6 +32,7 @@
                         <img src="{{ imagen }}" alt="">
                         <li class="nav-item"><a class="btn btn-danger" href="{% url 'crear_post' %}">Postear</a></li>
                         <li class="nav-item"><a class="btn btn-primary" href="{% url 'logout' %}">logout</a></li>
+                        <li class="nav-item"><a class="btn btn-primary" href="{% url 'posteos' %}">posteos</a></li>
                         
                         {% endif %}
                     </ul>
