--- a/Blogs/templates/Blogs/posteos.html
+++ b/Blogs/templates/Blogs/posteos.html
@@ -41,7 +41,7 @@
                     <div class="card">
                         <img class="card-img-top" src="{{ post.imagen.url }}" alt="{{ post.titulo }}">
                         <div class="card-body">
-                            <h5 class="card-title"> {{ post.titulo }}</h5>
+                            <a href="{% url 'verPost' post.id %}" class="card-title"> {{ post.titulo }} </a>
                             <h6 class="card-subtitle"> Autor: {{ post.autor.username }}</h6>
                         </div>
                         <div class="card-footer">
@@ -49,7 +49,7 @@
                                 <a href="{% url 'eliminar_post' post.id %}" class="btn btn-danger">
                                     Eliminar post 
                                 </a>
-                                <a href="{% url 'editarPost' post.id %}" class="btn btn-danger">
+                                <a href="{% url 'editarPost' post.id %}" class="btn btn-primary">
                                     Editar post 
                                 </a>
                             {% endif %}
