--- a/AppLogin/templates/AppLogin/agregarAvatar.html
+++ b/AppLogin/templates/AppLogin/agregarAvatar.html
@@ -4,12 +4,12 @@
 
 
 {% block titulo_de_pagina %}
-<h1 class="mb-5">Agregando Avatar de {{ usuario }}</h1>
+<h1 class="mb-5">SELECCIONA UN AVATAR PARA {{ usuario }}</h1>
 {% endblock %}
 
 
 {% block contenido_que_cambia %}
-<h1>AGREGAR AVATAR</h1>
+<h2>AGREGA UN AVATAR!</h2>
 
 <form action="{% url 'agregarAvatar' %}"  method="POST" enctype="multipart/form-data"> {% csrf_token %}
 
@@ -18,4 +18,7 @@
 
 </form>
 
+{% endblock %}
+
+{% block inicio %}
 {% endblock %}
