--- a/AppLogin/templates/AppLogin/login.html
+++ b/AppLogin/templates/AppLogin/login.html
@@ -20,7 +20,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="btn btn-primary" href="{% url 'home' %}">Home</a></li>
+                        <li class="nav-item"><a class="btn btn-primary" href="{% url 'home' %}">Inicio</a></li>
                         
                        
                        
@@ -29,7 +29,7 @@
             </div>
         </nav>
         <!-- Page content-->
-        <h3 class="fw-bolder mb-1">FORMULARIO DE INGRESO</h3>
+        <h3 class="fw-bolder mb-1">INGRESE SU USUARIO</h3>
         <h2 >{{mensaje}}</h2>
                             <!-- Post meta content-->
         {% load crispy_forms_tags %}
