--- a/Blogs/templates/Blogs/crear_post.html
+++ b/Blogs/templates/Blogs/crear_post.html
@@ -17,13 +17,13 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#!">Crear Entrada</a>
+                <a class="navbar-brand" href="{% url 'home' %}">Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        {% block titulo_de_pagina %}  <h1 class="mb-5">Crear Entrada</h1>  {% endblock %}
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'login' %}">Sign In</a></li>
-                        <li class="nav-item"><a class="btn btn-primary" href="{% url 'logout' %}">logout</a></li>
+                        {% block titulo_de_pagina %}    {% endblock %}
+                        <li class="nav-item"><a class="btn btn-primary" aria-current="page" href="{% url 'posteos' %}">Ir a los Posts</a></li>
+                        <li class="nav-item"><a class="btn btn-secondary" href="{% url 'logout' %}">Cerrar sesion</a></li>
                       
                     </ul>
                 </div>
