--- a/Blogs/templates/Blogs/editarPost.html
+++ b/Blogs/templates/Blogs/editarPost.html
@@ -3,24 +3,24 @@
 
 
 {% block titulo_de_pagina %}
-<h1 class="mb-5">EDITANDO POSTEOS</h1>
+<h1 class="mb-5">EDITAR POSTEOS</h1>
 {% endblock %}
 
 
 {% block contenido_que_cambia %}
-<h1>EDITANDO </h1>
-
-<form action="{% url 'editarPost' id  %}" method="POST"> {% csrf_token %}
-
-<table>
-
-
-    {{ formulario.as_table }}
-
-</table>
-
+<h2>EDITA A GUSTO! </h2>
+{% load crispy_forms_tags%}
+<form action="{% url 'editarPost' id  %}" class="mt-3" method="POST"> {% csrf_token %}
+    <table>
+        {{ formulario|crispy }}
+    </table>
 <input type="submit", value="Guardar">
 
 </form>
 
+{% endblock %}
+{% block inicio %}
+{% endblock %}
+
+{% block contenido_inicio %}
 {% endblock %}
