--- a/Blogs/templates/Blogs/posteos.html
+++ b/Blogs/templates/Blogs/posteos.html
@@ -22,9 +22,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         
-                        <li class="nav-item"><a class="btn btn-light" aria-current="page" href="{% url 'home' %}">Home</a></li>
-                        <li class="nav-item"><a class="btn btn-danger" href="{% url 'crear_post' %}">Postear</a></li>
-                        <li class="nav-item"><a class="btn btn-primary" href="{% url 'logout' %}">logout</a></li>
+                        <li class="nav-item"><a class="btn btn-light" aria-current="page" href="{% url 'home' %}">Inicio</a></li>
+                        <li class="nav-item"><a class="btn btn-success" href="{% url 'crear_post' %}">Publicar post</a></li>
+                        <li class="nav-item"><a class="btn btn-primary" href="{% url 'logout' %}">Cerrar sesion</a></li>
                       
                     </ul>
                 </div>
