--- a/Blogs/templates/Blogs/ver_post.html
+++ b/Blogs/templates/Blogs/ver_post.html
@@ -10,9 +10,16 @@
 
 {% block contenido_que_cambia %}
 
-    {{ post.titulo }}
-    {{ post.subtitulo }}
-    {{ post.imagen }}
-    {{ post.autor.username }}
-    
+    <h1 align="center">{{ post.titulo }}</h1>
+    <h2 align="center">{{ post.subtitulo }}</h2>
+    <img align="center" src="{{ post.imagen.url }}" width="400" height="400">
+    <h3 align="center"> {{ post.contenido | safe}} </h3>
+    <h6 align="center"> autor:{{ post.autor }}  publicado el:{{ post.fecha_publicacion }}</h6>
+   
+{% endblock %}
+
+{% block inicio %}
+{% endblock %}
+
+{% block contenido_inicio %}
 {% endblock %}
