--- a/AppLogin/templates/AppLogin/home.html
+++ b/AppLogin/templates/AppLogin/home.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>WorkHome</title>
+        <title>TodoBlog</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -122,7 +122,7 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <ul class="list-unstyled mb-0">
-                                        <li><a class="btn btn-primary" href="{% url 'posteos' %}">Proyecto Coder</a></li>
+                                        <li><a class="btn btn-primary" href="{% url 'posteos' %}">TodoBlog</a></li>
                                         
                                     </ul>
                                 </div>
