--- a/Blogs/templates/Blogs/crear_post.html
+++ b/Blogs/templates/Blogs/crear_post.html
@@ -33,8 +33,8 @@
         <!--{% load crispy_forms_tags %}-->
         
       
-        
-          <form action="{% url 'posteos' %}" class="mt-3" autocomplete="off" method="POST" enctype="multipart/form-data"> 
+        {% load crispy_forms_tags%}
+          <form action="" class="mt-3" autocomplete="off" method="POST" enctype="multipart/form-data"> 
             {% csrf_token %}
         
            
