--- a/AppLogin/templates/AppLogin/home.html
+++ b/AppLogin/templates/AppLogin/home.html
@@ -35,6 +35,7 @@
                         <li class="nav-item"><a class="btn btn-secondary" href="{% url 'logout' %}">Cerrar sesion</a></li>
 
                         <li class="nav-item"><a class="btn btn-primary" href="{% url 'posteos' %}">Ir a los Post</a></li>
+                        <li class="nav-item"><a class="btn btn-success" href="{% url 'agregarAvatar' %}">Agrega un Avatar</a></li>
                         <li class="nav-item"><a class="btn btn-primary" href="{% url 'about' %}">About</a></li>
                         {% endif %}
                     </ul>
